UI implemented with integration to back-end API.